--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Terriermon</h1>
-  <p>Terriermon is my favorite digimon. Digimon are not pokemon. This confusion can cause many playground brawls.</p>
+  <p>Terriermon is my favorite Digimon. Digimon are not pokemon. This confusion can cause many playground brawls.</p>
   <p>Here's Terriermon:</p>
   <img src="https://media.giphy.com/media/BaSnOKasWWNig/giphy.gif" alt="">
   <p>Abilities:</p>
